--- a/linkedin-backend/package.json
+++ b/linkedin-backend/package.json
@@ -6,6 +6,9 @@
     "start": "node index.js",
     "dev": "node index.js"
   },
+  "engines": {
+    "node": ">=18.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
